# Hospital-Queue

./: CMakeLists.txt  README.md
public/: index.html
src/: main.cpp
